testdata/compiler/invalid/import-cycle-b.pt
import "import-cycle-a.pt"

req b:
  GET /b
